--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/poppins": "^5.2.7",
     "@supabase/supabase-js": "^2.91.1",
+    "@zegocloud/zego-uikit-prebuilt": "^2.17.2",
     "lucide-react": "^0.563.0",
     "pigeon-maps": "^0.22.1",
     "react": "^19.2.0",
