--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.2.7",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.91.1",
     "@zegocloud/zego-uikit-prebuilt": "^2.17.2",
     "lucide-react": "^0.563.0",
