--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.91.1",
     "@zegocloud/zego-uikit-prebuilt": "^2.17.2",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.563.0",
+    "openai": "^6.17.0",
     "pigeon-maps": "^0.22.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
