--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.6",
     "@fontsource/poppins": "^5.2.7",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.91.1",
+    "@yudiel/react-qr-scanner": "^2.5.1",
     "@zegocloud/zego-uikit-prebuilt": "^2.17.2",
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.563.0",
