--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/poppins": "^5.2.7",
     "@supabase/supabase-js": "^2.91.1",
     "@zegocloud/zego-uikit-prebuilt": "^2.17.2",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "pigeon-maps": "^0.22.1",
     "react": "^19.2.0",
